# lessonscribe

./: .gitignore  Makefile  README.md
backend/: pyproject.toml
backend/app/: __init__.py  audio.py  config.py  doctor.py  jobs.py  main.py  schemas.py  storage.py  transcription.py
backend/lessonscribe_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_api.py  test_storage.py  test_transcription.py
docs/: future-features-plan.md
docs/superpowers/plans/: 2026-03-14-library-sidebar-plan.md  2026-03-15-windows-onboarding-plan.md
docs/superpowers/specs/: 2026-03-14-force-delete-running-lecture-design.md  2026-03-14-lecture-deletion-design.md  2026-03-14-library-sidebar-design.md  2026-03-14-make-dev-workflow-design.md  2026-03-15-windows-onboarding-design.md
frontend/: eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  index.css  types.ts
frontend/src/components/: EditSegmentModal.tsx  TranscriptPanel.test.tsx  TranscriptPanel.tsx
frontend/src/lib/: format.ts  transcript.test.ts  transcript.ts
frontend/src/test/: setup.ts
scripts/: bootstrap-windows.ps1  generate_sample_audio.py  smoke_test_small_example.py  start-windows.ps1
